examples/example-workload/ingressroute/05-delegation-across-namespaces/blog.ingressroute.yaml
---
apiVersion: contour.heptio.com/v1beta1
kind: IngressRoute
metadata: 
  name: blog
  namespace: marketing
spec: 
  routes: 
    - match: /blog
      services: 
        - name: s2
          port: 80
