examples/example-workload/ingressroute/05-delegation-across-namespaces/root.ingressroute.yaml
---
apiVersion: contour.heptio.com/v1beta1
kind: IngressRoute
metadata: 
  name: namespace-delegation-root
  namespace: default
spec: 
  virtualhost:
    fqdn: ns-root.bar.com
  routes: 
    - match: /
      services: 
        - name: s1
          port: 80
# delegate the subpath, `/blog` to the IngressRoute object in the marketing namespace with the name `blog`
    - match: /blog 
      delegate:
        name: blog
        namespace: marketing
